dropdown menu fans appeal

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                     <li><a href="#">Main</a></li>
                     <li><a href="pages/news.html">News</a></li>
                     <li><a href="#">For fans</a></li>
-                    <li><a href="#" class="dropdown">Fans appeal</a>
-                        <!-- <div class="dropdown_fans">
+                    <li class="dropdown"><a href="#"  tr>Fans appeal</a>
+                        <div class="dropdown_fans">
                             <a href="#">Fan club</a>
                             <a href="#">Tour schedule</a>
                             <a href="#">Lyrics</a>
-                        </div> -->
+                        </div>
                     </li>
 
                     <li><a href="#">Concent venue</a></li>
