all pages, appeal adding and chaching added

--- a/pages/news.html
+++ b/pages/news.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  manifest="../manifest.appcache">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,18 +32,18 @@
         
                                     <div class="dropdown-menu" aria-labelledby="forFansMenu">
                                         <a href="#" class="dropdown-item" >Fan Club</a>
-                                        <a href="#" class="dropdown-item" >Tour schedule</a>
+                                        <a href="for-fans.html" class="dropdown-item" >Tour schedule</a>
                                         <a href="#" class="dropdown-item" >Lyrics</a>
                                     </div>
                                 </li>
                             <li class="nav-item p-2">
-                                <a href="#" class="nav-link text-dark">Fans appeal</a>
+                                <a href="fans-appeal.html" class="nav-link text-dark">Fans appeal</a>
                             </li>
                             <li class="nav-item p-2">
-                                <a href="#" class="nav-link text-dark">Concert venue</a>
+                                <a href="concert-venue.html" class="nav-link text-dark">Concert venue</a>
                             </li>
                             <li class="nav-item p-2">
-                                <a href="#" class="nav-link text-dark">Admin</a>
+                                <a href="admin.html" class="nav-link text-dark">Admin</a>
                             </li>
                         </ul>
                     </div>
@@ -53,7 +53,7 @@
     <main class="container" >
         <div class="row p-3">
 
-        <div class="col-sm-4">
+        <div class="col-md-4">
             <div class="card p-2">
                 <img src="../images/mf_face_1.jpg" alt="">
                 <div class="card-body">
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-md-4">
             <div class="card p-2">
                 <img src="../images/mf_face_1.jpg" alt="">
                 <div class="card-body">
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-md-4">
             <div class="card p-2">
                 <img src="../images/mf_face_1.jpg" alt="">
                 <div class="card-body">
@@ -80,7 +80,7 @@
         </div>
 
         <div class="row p-3">
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <div class="card p-2">
                     <img src="../images/mf_face_1.jpg" alt="">
                     <div class="card-body">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <div class="card p-2">
                     <img src="../images/mf_face_1.jpg" alt="">
                     <div class="card-body">
@@ -96,7 +96,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <div class="card p-2">
                     <img src="../images/mf_face_1.jpg" alt="">
                     <div class="card-body">
@@ -109,11 +109,11 @@
     </main>
  
     <footer class="row d bg-dark d-flex justify-content-center">
-            <h5 class="p-5 text-center col-sm-12 text-light" style="margin: 0" ><em>“To give someone a piece of your heart, is worth more than all the wealth in the world.”
-                    – Michael Jackson</em> </h5>
+            <h5 class="p-5 text-center col-sm-12 text-light" style="margin: 0" ><em>“But for me the sweetest contact with God has no form. I close my eyes, look within, and enter a deep soft silence. The infinity of God's creation embraces me.”
+                    </em> </h5>
                 
     </footer>
  
- 
+    <script src="../script.js"></script>
 </body>
 </html>
