news and appeals adding

--- a/pages/for-fans.html
+++ b/pages/for-fans.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body class="container-fluid">
+    <div id="for-fans_body"></div>
     <header class=" d-flex row" >
         <div class=" bg-dark col-sm-2 d-flex justify-content-center align-items-center text-light "><h2>MJ</h2></div>
         <nav class="navbar navbar-expand-lg navbar-light  col-sm-10 bg-light" >
