--- a/pages/admin.html
+++ b/pages/admin.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="../script.js"></script>
+   
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
-<body class="container-fluid">
+<body class="container-fluid" onload="adminFunctional()">
     <header class=" d-flex row" >
         <div class=" bg-dark col-sm-2 d-flex justify-content-center align-items-center text-light "><h2>MJ</h2></div>
         <nav class="navbar navbar-expand-lg navbar-light  col-sm-10 bg-light" >
@@ -49,7 +51,7 @@
             </div>
         </nav>
     </header>
-    <main >
+    <main  >
         <div class="row d-flex mt-5 mb-5 justify-content-center">
             <div class="col-md-6 d-flex justify-content-center align-items-center">
                     <label for="files"  class="btn btn-dark p-3 ">Select Image</label>
@@ -74,5 +76,6 @@
     <footer class="row d bg-dark d-flex justify-content-center">
             <h5 class="p-5 text-center col-sm-12 text-light" style="margin: 0" ><em>“A star can never die. It just turns into a smile and melts back into the cosmic music, the dance of life.”</em> </h5>
     </footer>
+    <script src="../script.js"></script>
 </body>
 </html>
